fix(SelectionControls): resolve height issues with wrapped labels in radios
fixes #10360

--- a/packages/vuetify/src/styles/components/_selection-controls.sass
+++ b/packages/vuetify/src/styles/components/_selection-controls.sass
@@ -27,7 +27,7 @@
       display: inline-flex
       flex: 1 1 auto
       // TODO: Resolve in v3, all selection controls need separate sass files
-      height: 24px
+      height: auto
 
   &__input
     color: inherit
